# ai-agents-design-patterns

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTERVIEW_PREP.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: __init__.py  compare.py
docs/: RECORDING.md
patterns/01-prompt-chaining/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/02-routing/: __init__.py  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/03-parallelization/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/04-orchestrator-workers/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/05-evaluator-optimizer/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/06-code-execution/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/07-react/: README.md  __init__.py  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/08-reflection/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/09-plan-and-execute/: README.md  diagram.md  example.py  interview.md  pattern.py  test_pattern.py
patterns/10-multi-agent/: README.md  diagram.md  example.py  (+3 more)
shared/: __init__.py  config.py  errors.py  llm_client.py  loader.py  observability.py  tools.py  trace.py  types.py
(+70 files in other folders)
